--- a/guide_contact.html
+++ b/guide_contact.html
@@ -61,7 +61,7 @@
 
 <body style="padding-top: 70px;font-family:Roboto">
 
-<div class="container" style="padding-bottom:5vh;min-height:700px;">
+<div class="container" style="padding-bottom:5vh;min-height:100vh;">
     <div class="page-header">
         <center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:6vh">Contacts utiles</center>
     </div>
@@ -74,8 +74,8 @@
 		    <div data-toggle="lightbox" data-gallery="gallery" class="col-md-4 img__wrap" style="padding:1vw;margin:0;">
 		        <img src="recherche_bien.jpg" style="width:100%;"> <!-- Immo ancien--> 
 		        <div class="img__description_layer">
-	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong" style="cursor:pointer;"><p style="margin-bottom:10px;">Chercher un bien ancien</p>
-	    		    	<svg width="20%" height="20%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong" style="cursor:pointer;"><p style="margin-bottom:10px;margin-right:10px;margin-left:10px;">Chercher un bien ancien</p>
+	    		    	<svg width="30%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 					  <path fill-rule="evenodd" d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 5a.5.5 0 0 0-1 0v4.793L5.354 7.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 9.793V5z"/>
 					</svg>
 	    		    </a></center>   
@@ -111,8 +111,8 @@
 		    <div data-toggle="lightbox" data-gallery="gallery" class="col-md-4 img__wrap" style="padding:1vw;margin:0;">
 		      <img src="prix_marché.jpg" style="width:100%;"> <!-- Immo neuf--> 
 		      <div class="img__description_layer">
-	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong1" style="cursor:pointer;"><p style="margin-bottom:10px;">Chercher un bien neuf</p>
-	    		    	<svg width="20%" height="20%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong1" style="cursor:pointer;"><p style="margin-bottom:10px;margin-right:10px;margin-left:10px;">Chercher un bien neuf</p>
+	    		    	<svg width="30%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 					  <path fill-rule="evenodd" d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 5a.5.5 0 0 0-1 0v4.793L5.354 7.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 9.793V5z"/>
 					</svg></a></center>
 	    		</div>
@@ -146,8 +146,8 @@
 		    <div data-toggle="lightbox" data-gallery="gallery" class="col-md-4 img__wrap" style="padding:1vw;margin:0;">
 		      <img src="immo_map.jpg" style="width:100%;"> <!-- Carte prix, nuisances sonores... --> 
 		      <div class="img__description_layer">
-	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong2" style="cursor:pointer;"><p style="margin-bottom:10px;">Cartographie des prix</p>
-	    		    	<svg width="20%" height="20%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong2" style="cursor:pointer;"><p style="margin-bottom:10px;margin-right:10px;margin-left:10px;">Cartographie des prix</p>
+	    		    	<svg width="30%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 					  <path fill-rule="evenodd" d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 5a.5.5 0 0 0-1 0v4.793L5.354 7.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 9.793V5z"/>
 					</svg></a></center>
 	    		</div>
@@ -182,8 +182,8 @@
 		    <div data-toggle="lightbox" data-gallery="gallery" class="col-md-4 img__wrap" style="padding:1vw;margin:0;">
 		      <img src="books.jpg" style="width:100%;"> <!-- Recommandations de professionnels & blogs pro--> 
 		      <div class="img__description_layer">
-	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong3" style="cursor:pointer;"><p style="margin-bottom:10px;">Recommandations de professionnels</p>
-	    		    	<svg width="20%" height="20%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong3" style="cursor:pointer;"><p style="margin-bottom:10px;margin-right:10px;margin-left:10px;">Recommandations de professionnels</p>
+	    		    	<svg width="30%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 					  <path fill-rule="evenodd" d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 5a.5.5 0 0 0-1 0v4.793L5.354 7.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 9.793V5z"/>
 					</svg></a></center>
 	    		</div>
@@ -213,8 +213,8 @@
 		    <div data-toggle="lightbox" data-gallery="gallery" class="col-md-4 img__wrap" style="padding:1vw;margin:0;">
 		      <img src="agent.jpg" style="width:100%;"> <!-- Après votre emménagement--> 
 		      <div class="img__description_layer">
-	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong4" style="cursor:pointer;"><p style="margin-bottom:10px;">Après votre emménagement</p>
-	    		    	<svg width="20%" height="20%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong4" style="cursor:pointer;"><p style="margin-bottom:10px;margin-right:10px;margin-left:10px;">Après votre emménagement</p>
+	    		    	<svg width="30%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 					  <path fill-rule="evenodd" d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 5a.5.5 0 0 0-1 0v4.793L5.354 7.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 9.793V5z"/>
 					</svg></a></center>
 	    		</div>
@@ -244,8 +244,8 @@
 		    <div data-toggle="lightbox" data-gallery="gallery" class="col-md-4 img__wrap" style="padding:1vw;margin:0;">
 		      <img src="banque.jpg" style="width:100%;"> <!-- Banques & prêts--> 
 		      <div class="img__description_layer">
-	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong5" style="cursor:pointer;"><p style="margin-bottom:10px;">Banques & prêts</p>
-	    		    	<svg width="20%" height="20%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+	    		    <center><a class="img__description" data-toggle="modal" data-target="#exampleModalLong5" style="cursor:pointer;"><p style="margin-bottom:10px;margin-right:10px;margin-left:10px;">Banques & prêts</p>
+	    		    	<svg width="30%" viewBox="0 0 16 16" class="bi bi-arrow-down-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 					  <path fill-rule="evenodd" d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 5a.5.5 0 0 0-1 0v4.793L5.354 7.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 9.793V5z"/>
 					</svg></a></center>
 	    		</div>
