--- a/guide_timeline.html
+++ b/guide_timeline.html
@@ -77,7 +77,7 @@
           <h2 class="h5 mb-0">La recherche du bien</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>Quelques jours à quelques mois</span>
           <p class="text-small mt-2 font-weight-light">Une fois votre budget estimé, les recherches de votre futur logement peuvent commencer. Vous pouvez faire appel à une agence ou passer par un certain nombre de sites internet.</p>
           <p class="text-small mt-2 font-weight-light">Place ensuite à la négociation : gardez à l'esprit que le prix indiqué, notamment pour les biens anciens, n'est qu'une proposition, qu'il est possible de faire baisser. Dans le neuf, la marge de manoeuvre est plus réduite et se limite souvent à l'offre des frais de notaires.</p>
-          <p class="text-small mt-2 font-weight-light">Petite astuce : depuis peu, le gouvernement français rend publique l'intégralité des données foncières. Vous pouvez utiliser <a href="https://app.dvf.etalab.gouv.fr/">cette base de données </a> (sauf en Alsace/Lorraine) pour mieux connaître les prix du marché..</p>
+          <p class="text-small mt-2 font-weight-light">Petite astuce : depuis peu, le gouvernement français rend publique l'intégralité des données foncières. Vous pouvez utiliser <a a target="_blank" rel="noopener noreferrer" href="https://app.dvf.etalab.gouv.fr/">cette base de données </a> (sauf en Alsace/Lorraine) pour mieux connaître les prix du marché..</p>
       </li>
       <li class="timeline-item bg-white rounded ml-3 p-4 shadow">
           <div class="timeline-arrow"></div>
