--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@ function showPage() {
 		</div>
 		<div class="row">
 			<div class="col-md-4" style="padding:5vh;">
-				<img src="timeline.png" alt="Timeline" style="width:100%;"/>
+				<a href="guide_timeline.html"><img src="timeline.png" alt="Timeline" style="width:100%;"/></a>
 				<hr>
-				<a href="guide_timeline.html" type="button" class="btn btn-primary btn-lg" style="width:100%;">Les grandes étapes</a>
+				<a href="guide_timeline.html" type="button" class="btn btn-primary btn-lg">Les grandes étapes</a>
 			</div>
 			<div class="col-md-4" style="padding:5vh;">
-				<img src="phone-book.png" alt="Contacts" style="width:100%;"/>
+				<a href="guide_contact.html"><img src="phone-book.png" alt="Contacts" style="width:100%;"/></a>
 				<hr>
-				<a href="guide_contact.html" type="button" class="btn btn-primary btn-lg" style="width:100%;">Contacts utiles</a>
+				<a href="guide_contact.html" type="button" class="btn btn-primary btn-lg">Contacts utiles</a>
 			</div>
 			<div class="col-md-4" style="padding:5vh;">
-				<img src="open-book.png" alt="Livre" style="width:100%;"/>
+				<a href="guide_lexique.html"><img src="open-book.png" alt="Livre" style="width:100%;"/></a>
 				<hr>
-				<a href="guide_lexique.html" type="button" class="btn btn-primary btn-lg" style="width:100%;">Lexique de l'immobilier</a>
+				<a href="guide_lexique.html" type="button" class="btn btn-primary btn-lg">Lexique de l'immobilier</a>
 			</div>
 		</div>
 	</div>
@@ -129,19 +129,19 @@ function showPage() {
 		</div>
 		<div class="row">
 			<div class="col-md-4" style="padding:5vh;">
-				<img src="money-bag.png" alt="Argent" style="width:100%;">
+				<a href="simulation_budget.html"><img src="money-bag.png" alt="Argent" style="width:100%;"></a>
 				<hr>
-				<a href="simulation_budget.html" type="button" class="btn btn-primary btn-lg" style="width:100%;">Estimez votre budget</a>
+				<a href="simulation_budget.html" type="button" class="btn btn-primary btn-lg">Estimez votre budget</a>
 			</div>
 			<div class="col-md-4" style="padding:5vh;">
-				<img src="comparison.png" alt="Balance" style="width:100%;">
+				<a href="simulation_acheterlouer.html"><img src="comparison.png" alt="Balance" style="width:100%;"></a>
 				<hr>
-				<a href="simulation_acheterlouer.html" type="button" class="btn btn-primary btn-lg" style="width:100%;">Acheter ou louer</a>
+				<a href="simulation_acheterlouer.html" type="button" class="btn btn-primary btn-lg">Acheter ou louer</a>
 			</div>
 			<div class="col-md-4" style="padding:5vh;">
-				<img src="speedometer.png" alt="Cadrant" style="width:100%;">
+				<a href="simulation_plan.html"><img src="speedometer.png" alt="Cadrant" style="width:100%;"></a>
 				<hr>
-				<a href="simulation_plan.html" type="button" class="btn btn-primary btn-lg" style="width:100%;">Votre plan de financement</a>
+				<a href="simulation_plan.html" type="button" class="btn btn-primary btn-lg">Votre plan de financement</a>
 			</div>
 		</div>
 	</div>
