--- a/guide_lexique.html
+++ b/guide_lexique.html
@@ -60,116 +60,116 @@
 
 <body style="padding-top: 70px;font-family:'Roboto';">
 
-<div class="container" style="padding-bottom:5vh;min-height:700px;">
+<div class="container" style="padding-bottom:5vh;min-height:100vh;">
     <div class="page-header">
         <center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:6vh">Lexique de l'immobilier</center>
     </div> 
     <input class="form-control" id="myInput" type="text" placeholder="Cherchez un mot dans le lexique...">
     <br>
     <ul class="list-group" id="myList">
-    	<li class="list-group-item" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Acte de vente</li>
+    	<li class="list-group-item" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Acte de vente</li>
     	<div class="collapse" id="collapse1">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Il peut être signé dès que toutes les conditions sont réunies. La signature de l'acte se fera devant notaire.
 		  </div>
 		</div>
-    	<li class="list-group-item" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Apport personnel</li>
+    	<li class="list-group-item" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Apport personnel</li>
     	<div class="collapse" id="collapse2">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    C'est l’argent que l'emprunteur va personnellement investir. Il est constitué de la somme des liquidités, de l’épargne et du fruit de la vente de titres que l’emprunteur versera pour acheter un bien.
 		  </div>
 		</div>
-    	<li class="list-group-item" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Compromis de vente</li>
+    	<li class="list-group-item" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Compromis de vente</li>
     	<div class="collapse" id="collapse3">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Il s'agit de l’acte par lequel le vendeur s’engage à vendre un bien immobilier à un acheteur. Il précise les conditions de la vente du bien (notamment le prix et les délais). Le compromis est généralement assorti du versement d’un acompte. Le compromis rend la vente ferme et définitive (sauf cas de conditions suspensives)
 		  </div>
 		</div>
-    	<li class="list-group-item" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapse4" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Contrat de réservation</li>
+    	<li class="list-group-item" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapse4" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Contrat de réservation</li>
     	<div class="collapse" id="collapse4">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    C’est un contrat par lequel un promoteur s’engage à réserver un logement neuf ou en construction à un acquéreur qui doit en contrepartie verser un dépôt de garantie. Le contrat doit contenir un certain nombre de mentions obligatoires sur le bien vendu, son prix et les modalités de sa révision.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapse5" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Durée du crédit</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapse5" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Durée du crédit</li>
     	<div class="collapse" id="collapse5">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    C'est le nombre de mensualités sur lequel l'emprunteur remboursera son crédit immobilier. Plus la durée du prêt est longue, plus le coût de l'emprunt sera élevé.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse6" aria-expanded="false" aria-controls="collapse6" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Délai de rétractation</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse6" aria-expanded="false" aria-controls="collapse6" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Délai de rétractation</li>
     	<div class="collapse" id="collapse6">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Prévu dans la loi SRU lors d'une promesse ou d'un compromis de vente est de sept jours.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse7" aria-expanded="false" aria-controls="collapse7" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Frais de dossier</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse7" aria-expanded="false" aria-controls="collapse7" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Frais de dossier</li>
     	<div class="collapse" id="collapse7">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Frais demandés par les établissements financiers pour la mise en place d'un prêt immobilier.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse8" aria-expanded="false" aria-controls="collapse8" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Frais de notaires</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse8" aria-expanded="false" aria-controls="collapse8" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Frais de notaires</li>
     	<div class="collapse" id="collapse8">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Ils représentent généralement 7-8% du prix du bien s'il s'agit d'un logement ancien et 2-3% pour un logement neuf. Ils sont composés en grande partie des taxes versées au trésor public et des émoluments du notaire.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse9" aria-expanded="false" aria-controls="collapse9" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Mensualités</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse9" aria-expanded="false" aria-controls="collapse9" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Mensualités</li>
     	<div class="collapse" id="collapse9">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Somme payée chaque mois pour rembourser un emprunt. Dans le cas d’un prêt amortissable, la mensualité est constituée en partie de remboursement de capital et en partie d’intérêts et de frais financiers. La part des intérêts décroît avec le temps au profit du capital.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse10" aria-expanded="false" aria-controls="collapse10" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Prêt amortissable</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse10" aria-expanded="false" aria-controls="collapse10" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Prêt amortissable</li>
     	<div class="collapse" id="collapse10">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Il s'agit de la majorité des prêts octroyés par les banques en France. Contrairement aux prêts in fine, le remboursement du capital est étalé dans le temps et n’est pas effectué en une seule fois. Pendant la durée du prêt, l’emprunteur doit rembourser le capital et les intérêts.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse11" aria-expanded="false" aria-controls="collapse11" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Notaire</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse11" aria-expanded="false" aria-controls="collapse11" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Notaire</li>
     	<div class="collapse" id="collapse11">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Officier ministériel chargé de recevoir ou de rédiger des actes et des contrats, leur conférant ainsi l'authenticité qui les rend incontestables.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse12" aria-expanded="false" aria-controls="collapse12" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Revenus</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse12" aria-expanded="false" aria-controls="collapse12" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Revenus</li>
     	<div class="collapse" id="collapse12">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Ce terme désigne les revenus nets du (ou des) emprunteur(s). Il regroupe les revenus salariés ou assimilés, les pensions perçues, les allocations ou revenus sociaux, les revenus f et financiers.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse13" aria-expanded="false" aria-controls="collapse13" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Taux d'endettement actuel</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse13" aria-expanded="false" aria-controls="collapse13" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Taux d'endettement actuel</li>
     	<div class="collapse" id="collapse13">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Il s'agit du rapport des charges financières (exemple : crédit à la consommation, crédit auto, versement d'une pension alimentaire...) sur les revenus globaux de l'emprunteur avant d'effectuer son projet immobilier.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse14" aria-expanded="false" aria-controls="collapse14" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Taux d'endettement visé</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse14" aria-expanded="false" aria-controls="collapse14" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Taux d'endettement visé</li>
     	<div class="collapse" id="collapse14">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Le chiffre de 33% est souvent considéré comme un « seuil » d'endettement maximal. Des exceptions sont possibles selon le reste à vivre de l'emprunteur.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse15" aria-expanded="false" aria-controls="collapse15" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Taux d'assurance</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse15" aria-expanded="false" aria-controls="collapse15" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Taux d'assurance</li>
     	<div class="collapse" id="collapse15">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    L'assurance a pour but de garantir le prêteur en cas de décès ou d'invalidité de l'emprunteur. Le taux d'assurance varie notamment selon l'établissement assureur, l'âge de l'emprunteur et les garanties incluses dans le contrat d'assurance (ex : 'décès', 'invalidité totale', ...).
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse16" aria-expanded="false" aria-controls="collapse16" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Taux d'intérêt</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse16" aria-expanded="false" aria-controls="collapse16" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Taux d'intérêt</li>
     	<div class="collapse" id="collapse16">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Il s'agit d'un pourcentage perçu par le prêteur, en rémunération du capital prêté à l’emprunteur. Ce taux varie selon l'établissement prêteur, le type de prêt, la durée de l’emprunt. Il est défini lors de la conclusion du contrat de prêt.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse17" aria-expanded="false" aria-controls="collapse17" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Taxe foncière</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse17" aria-expanded="false" aria-controls="collapse17" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Taxe foncière</li>
     	<div class="collapse" id="collapse17">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Taxe due par toute personne propriétaire du bien immobilier (y compris les terrains) au 1er janvier de l'année.
 		  </div>
 		</div>
-		<li class="list-group-item" data-toggle="collapse" data-target="#collapse18" aria-expanded="false" aria-controls="collapse18" style ="cursor:pointer;background-color:#f2f2f2;font-size:3vh">Taxe d'habitation</li>
+		<li class="list-group-item" data-toggle="collapse" data-target="#collapse18" aria-expanded="false" aria-controls="collapse18" style ="cursor:pointer;background-color:#f2f2f2;font-size:100%">Taxe d'habitation</li>
     	<div class="collapse" id="collapse18">
 		  <div class="card card-body" style="font-size:2.5vh">
 		    Taxe calculée sur le même mode que la taxe foncière, est payée par la personne, propriétaire ou locataire, qui occupe les lieux.
@@ -185,6 +185,7 @@ $(document).ready(function(){
     $("#myList li").filter(function() {
       $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
     });
+    $(".collapse").slideUp(0)
   });
 });
 </script>
