--- a/simulation_budget.html
+++ b/simulation_budget.html
@@ -60,7 +60,7 @@
 
 <body style="padding-top: 70px;font-family:Roboto">
 
-<div class="container" style="padding-bottom:5vh;min-height:700px;">
+<div class="container" style="padding-bottom:5vh;min-height:100vh;">
     <div class="page-header">
         <center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:6vh">Calculer son budget</center>
     </div>
@@ -74,27 +74,79 @@
 
 			<div class="col-md-4">
 				<center><label for="revenus">Revenus mensuels (€)</label>
-				<a type="button" data-toggle="tooltip" data-placement="bottom" title="Ce terme désigne les revenus nets du (ou des) emprunteur(s). Il regroupe les revenus salariés ou assimilés, les pensions perçues, les allocations ou revenus sociaux, les revenus locatifs et financiers.">
+				<a type="button" data-toggle="modal" data-target="#modal_revenus">
 				  <img src="info.png" alt="info" style="width:3vh;">
 				</a></center>
+
+				<div class="modal fade" id="modal_revenus" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle5" aria-hidden="true">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title" id="exampleModalLongTitle5">Revenus mensuels</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        Ce terme désigne les revenus nets du (ou des) emprunteur(s). Il regroupe les revenus salariés ou assimilés, les pensions perçues, les allocations ou revenus sociaux, les revenus locatifs et financiers.
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 				<input type="text" class="form-control" id="revenus" placeholder="ex : 1700" style="margin-top:5px" required>
 				<br>
 			</div>
 
 			<div class="col-md-4">
 				<center><label for="taux_endettement_actuel">Taux d'endettement actuel (%)</label>
-				<a type="button" data-toggle="tooltip" data-placement="bottom" title="Il s'agit du rapport des charges financières (exemple : crédit à la consommation, crédit auto, versement d'une pension alimentaire...) sur les revenus globaux de l'emprunteur avant d'effectuer son projet immobilier.">
+				<a type="button" data-toggle="modal" data-target="#modal_taux_endettement_actuel">
 				  <img src="info.png" alt="info" style="width:3vh;">
 				</a></center>
+
+				<div class="modal fade" id="modal_taux_endettement_actuel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle5" aria-hidden="true">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title" id="exampleModalLongTitle5">Taux d'endettement actuel</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        Il s'agit du rapport des charges financières (exemple : crédit à la consommation, autre crédit immobilier, crédit auto, ...) sur les revenus globaux de l'emprunteur avant d'effectuer son projet immobilier.<br><br>
+				        Si vous n'avez aucun emprunt en cours, <b>mettez "0" dans cette case</b>.
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 				<input type="text" class="form-control" id="taux_endettement_actuel" placeholder="ex : 0" style="margin-top:5px" required>
 				<br>
 			</div>
 
 			<div class="col-md-4">
 				<center><label for="taux_endettement_visé">Taux d'endettement visé (%)</label>
-				<a type="button" data-toggle="tooltip" data-placement="bottom" title="Le chiffre de 33% est souvent considéré comme un « seuil » d'endettement maximal. Des exceptions sont possibles selon le reste à vivre de l'emprunteur.">
+				<a type="button" data-toggle="modal" data-target="#modal_taux_endettement_visé">
 					<img src="info.png" alt="info" style="width:3vh;">
 				</a></center>
+
+				<div class="modal fade" id="modal_taux_endettement_visé" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle5" aria-hidden="true">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title" id="exampleModalLongTitle5">Taux d'endettement visé</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        <b>Le chiffre de 33%</b> est souvent considéré comme un « seuil » d'endettement maximal. Des exceptions sont possibles selon le reste à vivre de l'emprunteur.
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 				<input type="text" class="form-control" id="taux_endettement_visé" placeholder="ex : 33" style="margin-top:5px" required>
 				<br>
 			</div>
@@ -104,27 +156,82 @@
 
 			<div class="col-md-4">
 				<center><label for="taux_interet">Taux d'intérêt (%)</label>
-				<a type="button" data-toggle="tooltip" data-placement="bottom" title="Il s'agit d'un pourcentage perçu par le prêteur, en rémunération du capital prêté à l’emprunteur. Ce taux varie selon l'établissement prêteur, le type de prêt, la durée de l’emprunt. Il est défini lors de la conclusion du contrat de prêt.">
+				<a type="button" data-toggle="modal" data-target="#modal_intérêt">
 				  <img src="info.png" alt="info" style="width:3vh;">
 				</a></center>
+
+				<div class="modal fade" id="modal_intérêt" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle5" aria-hidden="true">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title" id="exampleModalLongTitle5">Taux d'intérêt</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        Il s'agit d'un pourcentage perçu par le prêteur, en rémunération du capital prêté à l’emprunteur. Ce taux varie selon les fluctuations de l'économie et selon votre profil particulier : la durée sur laquelle vous allez emprunter, la banque chez qui vous allez souscrire un emprunt, le type de prêt ... Il est défini lors de la conclusion du contrat de prêt.<br><br>
+				        Pour vous aider à estimer le taux d'intérêt qui sera appliqué dans votre cas, voilà la 
+				        <a target="_blank" rel="noopener noreferrer" href = "https://www.empruntis.com/financement/actualites/barometres_regionaux.php?reg=idf#reg_select">liste des taux de crédit immobilier pratiqués par les banques dans chaque région de France</a>.
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 				<input type="text" class="form-control" id="taux_interet" placeholder="ex : 0.9" style="margin-top:5px" required>
 				<br>
 			</div>
 
 			<div class="col-md-4">
 				<center><label for="taux_assurance">Taux d'assurance (%)</label>
-				<a type="button" data-toggle="tooltip" data-placement="bottom" title="L'assurance a pour but de garantir le prêteur en cas de décès ou d'invalidité de l'emprunteur. Le taux d'assurance varie notamment selon l'établissement assureur, l'âge de l'emprunteur et les garanties incluses dans le contrat d'assurance (ex : 'décès', 'invalidité totale', ...).">
+				<a type="button" data-toggle="modal" data-target="#modal_assurance">
 				  <img src="info.png" alt="info" style="width:3vh;">
 				</a></center>
+
+				<div class="modal fade" id="modal_assurance" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle5" aria-hidden="true">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title" id="exampleModalLongTitle5">Taux d'assurance</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        L'assurance a pour but de garantir le prêteur en cas de décès ou d'invalidité de l'emprunteur. Le taux d'assurance varie notamment selon l'établissement assureur, l'âge de l'emprunteur et les garanties incluses dans le contrat d'assurance (ex : 'décès', 'invalidité totale', ...).<br><br>
+				        Si vous êtes âgé de moins de 40 ans, le taux d'assurance sera de l'ordre de <b>0.1% par emprunteur</b>. Si vous avez entre 40 et 60 ans, le taux d'assurance sera d'environ <b>0.2% par emprunteur</b>. Si vous êtes âgés de plus de 60 ans, le taux d'assurance sera probablement <b>supérieur à 0.3% par emprunteur</b>.<br><br>
+				        Si vous souhaitez une estimation plus précise du taux d'assurance de votre futur emprunt immobilier, nous vous recommandons le <a target="_blank" rel="noopener noreferrer" href = "https://reassurez-moi.fr/simulation-assurance-pret-immobilier">lien suivant</a>.
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 				<input type="text" class="form-control" id="taux_assurance" placeholder="ex : 0.2" style="margin-top:5px" required>
 				<br>
 			</div>
 
 			<div class="col-md-4">
 				<center><label for="frais_notaire">Frais de notaire (%)</label>
-				<a type="button" data-toggle="tooltip" data-placement="bottom" title="Ils représentent généralement 7-8% du prix du bien s'il s'agit d'un logement ancien et 2-3% pour un logement neuf. Ils sont composés en grande partie des taxes versées au trésor public et des émoluments du notaire.">
+				<a type="button" data-toggle="modal" data-target="#modal_notaire">
 					<img src="info.png" alt="info" style="width:3vh;">
 				</a></center>
+
+				<div class="modal fade" id="modal_notaire" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle5" aria-hidden="true">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title" id="exampleModalLongTitle5">Frais de notaire</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        Ils représentent généralement <b>7-8%</b> du prix du bien s'il s'agit d'un logement ancien et <b>2-3%</b> pour un logement neuf. Ils sont composés en grande partie des taxes versées au trésor public et des émoluments du notaire.
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 				<input type="text" class="form-control" id="frais_notaire" placeholder="ex : 7.5" style="margin-top:5px" required>
 				<br>
 			</div>
@@ -134,27 +241,79 @@
 
 			<div class="col-md-4">
 				<center><label for="apport">Apport personnel (€)</label>
-				<a type="button" data-toggle="tooltip" data-placement="bottom" title="C'est l’argent que l'emprunteur va personnellement investir. Il est constitué de la somme des liquidités, de l’épargne et du fruit de la vente de titres que l’emprunteur versera pour acheter un bien.">
+				<a type="button" data-toggle="modal" data-target="#modal_apport">
 				  <img src="info.png" alt="info" style="width:3vh;">
 				</a></center>
+
+				<div class="modal fade" id="modal_apport" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle5" aria-hidden="true">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title" id="exampleModalLongTitle5">Apport personnel</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        C'est l’argent que l'emprunteur va personnellement investir. Il est constitué de la somme des liquidités, de l’épargne et du fruit de la vente de titres que l’emprunteur versera pour acheter un bien.
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 				<input type="text" class="form-control" id="apport" placeholder="ex : 20000" style="margin-top:5px" required>
 				<br>
 			</div>
 
 			<div class="col-md-4">
 				<center><label for="durée">Durée du crédit (années)</label>
-				<a type="button" data-toggle="tooltip" data-placement="bottom" title="C'est le nombre de mensualités (somme payée mensuellement) sur lequel l'emprunteur remboursera son crédit immobilier. Plus la durée du prêt est longue, plus le coût de l'emprunt sera élevé.">
+				<a type="button" data-toggle="modal" data-target="#modal_durée_crédit">
 				  <img src="info.png" alt="info" style="width:3vh;">
 				</a></center>
+
+				<div class="modal fade" id="modal_durée_crédit" tabindex="-1" role="dialog" aria-labelledby="modal_durée_crédit" aria-hidden="true">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title" id="exampleModalLongTitle5">Durée du crédit</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        C'est le nombre d'années sur lequel l'emprunteur remboursera son crédit immobilier. Plus la durée du prêt est longue, plus le coût de l'emprunt sera élevé.
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 				<input type="text" class="form-control" id="durée" placeholder="ex : 12" style="margin-top:5px" required>
 				<br>
 			</div>
 
 			<div class="col-md-4">
 				<center><label for="frais_fixes">Autres frais (€)</label>
-				<a type="button" data-toggle="tooltip" data-placement="bottom" title="Lors d'un achat immobilier, d'autres frais sont à anticiper, dont notamment le coût de potentiels travaux (dans l'ancien), les frais de garantie, les frais de dossier, des frais de courtier...">
+				<a type="button" data-toggle="modal" data-target="#modal_frais">
 					<img src="info.png" alt="info" style="width:3vh;">
 				</a></center>
+
+				<div class="modal fade" id="modal_frais" tabindex="-1" role="dialog" aria-labelledby="modal_frais" aria-hidden="true">
+				  <div class="modal-dialog" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title">Autres frais</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        Lors d'un achat immobilier, d'autres frais sont à anticiper, dont notamment le coût de potentiels travaux, les frais de garantie (en moyenne 1% du montant emprunté), les frais de dossier (en général entre 500€ et 1500€), de potentiels frais de courtier (en moyenne 1% du montant emprunté)...<br><br>
+				        Un premier ordre de grandeur de ces frais peut être fixé à <b>5000€</b> pour l'achat d'un bien ne nécessitant pas de travaux.
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 				<input type="text" class="form-control" id="frais_fixes" placeholder="ex : 5000" style="margin-top:5px" required>
 				<br>
 			</div>
