--- a/simulation_budget.html
+++ b/simulation_budget.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175116694-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175116694-2');
+</script>
+
 <title>Budget</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style_footer.css">
@@ -14,13 +25,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
-	<!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-MT8583S');</script>
-	<!-- End Google Tag Manager -->
 </head>
 
 <!-- Menu -->
@@ -67,10 +71,6 @@
 </nav>
 
 <body style="padding-top: 70px;font-family:Roboto">
-	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MT8583S"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
 
 <div class="container" style="padding-bottom:5vh;min-height:100vh;">
     <div class="page-header">
