--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ function showPage() {
 
 	<div class="bg-text">
 	  <p style="font-family: 'Crimson Text';font-size:12vh;">Vesca</p>
-	  <h5 style="font-family: 'Crimson Text';font-size:4vh;">Des outils pour mieux maîtriser son projet immobilier</h5>
+	  <h5 style="font-family: 'Crimson Text';font-size:4vh;">Des outils pour démarrer son projet immobilier</h5>
 	</div>
 	
 	<!-- Section Guides  -->
@@ -110,7 +110,7 @@ function showPage() {
 	<div class = "container justify-content-center" style="padding-top: 10vh;" id="guides">
 		<center><p style="color:white;font-family: 'Crimson Text';font-size:10vh;">Guides</p></center>
 		<div>
-			<center><p style="color:white;font-size:3vh;padding-right:5%;padding-left:5%">Vous êtes novice dans le monde de l'immobilier ? Vous cherchez à apprendre les bases ? Pas de souci ! Les guides ci-dessous sont là pour vous aider.</p></center>
+			<center><p style="color:white;font-size:3vh;padding-right:5%;padding-left:5%">Vous êtes novice dans le monde de l'immobilier ? Vous vous renseignez en vue d'un premier achat ? Pas de souci ! Les guides ci-dessous sont là pour vous aider.</p></center>
 		</div>
 		<div class="row">
 			<div class="col-md-4" style="padding:5vh;">
