--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175116694-2"></script>
-<script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175116694-2" defer></script>
+<script defer>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -19,15 +19,15 @@
 	<link href='https://fonts.googleapis.com/css?family=Crimson Text' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	<link rel="icon" href="favicon.ico" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" defer></script>
 	<meta name="author" content="Pierre-Louis Schnitzler">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 <!-- Animation -->
 
-<script>
+<script defer>
 var myVar;
 
 function myFunction() {
@@ -92,7 +92,7 @@ function showPage() {
 	</nav>
 
 	<!--navbar closes on click-->
-	<script>
+	<script defer>
 		$('.navbar-nav>li>a').on('click', function(){
 	    $('.navbar-collapse').collapse('hide');
 	});
