--- a/optimiser-credit-immobilier.html
+++ b/optimiser-credit-immobilier.html
@@ -11,13 +11,13 @@
 
   gtag('config', 'UA-175116694-2');
 </script>
-
-<title>Budget</title>
+	
+<title>Vesca | Optimiser votre crédit immobilier</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style_footer.css">
 	<link href='https://fonts.googleapis.com/css?family=Crimson Text' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-	<link rel="icon" href="favicon.ico" />
+	<link rel="icon" href="favicon.ico">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 	<meta name="author" content="Pierre-Louis Schnitzler">
@@ -45,9 +45,9 @@
             Guides
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="guide_timeline.html">Les grandes étapes</a>
-            <a class="dropdown-item" href="guide_contact.html">Contacts utiles</a>
-            <a class="dropdown-item" href="guide_lexique.html">Lexique de l'immobilier</a>
+            <a class="dropdown-item" href="etapes-cles-projet-immobilier.html">Les étapes clés de votre projet</a>
+            <a class="dropdown-item" href="astuces-pour-acheter-un-bien-immobilier.html">Quelques astuces</a>
+            <a class="dropdown-item" href="lexique-du-credit-immobilier.html">Lexique de l'immobilier</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -55,9 +55,9 @@
             Simulateurs
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="simulation_budget.html">Estimez votre budget</a>
-            <a class="dropdown-item" href="simulation_acheterlouer.html">Acheter ou louer</a>
-            <a class="dropdown-item" href="simulation_plan.html">Votre plan de financement</a>
+            <a class="dropdown-item" href="calcul-budget-immobilier.html">Calculer votre budget</a>
+            <a class="dropdown-item" href="acheter-ou-louer-simulation.html">Acheter ou louer</a>
+            <a class="dropdown-item" href="#">Optimiser votre crédit immobilier</a>
           </div>
         </li>
         <li class="nav-item">
@@ -72,8 +72,9 @@
 
 <div class="container" style="padding-bottom:5vh;min-height:100vh;">
     <div class="page-header">
-        <center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:6vh">En construction</center>
+        <h1><center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:6vh">Optimiser votre crédit immobilier</center></h1>
     </div>
+
 
 </div>
 
@@ -111,7 +112,7 @@ $(document).ready(function(){
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<div class="copyright">
-					<p>© <span><script>document.write(new Date().getFullYear())</script></span> <a href="#" class="transition">VescaLabs</a> All rights reserved.</p>
+					<p>© <span><script>document.write(new Date().getFullYear())</script></span> <a href="#" class="transition">Vesca</a> All rights reserved.</p>
 				</div>
 			</div>
 		</div>
