--- a/acheter-ou-louer-simulation.html
+++ b/acheter-ou-louer-simulation.html
@@ -11,8 +11,8 @@
 
   gtag('config', 'UA-175116694-2');
 </script>
-	
-<title>Budget</title>
+
+<title>Vesca | Acheter ou louer</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style_footer.css">
 	<link href='https://fonts.googleapis.com/css?family=Crimson Text' rel='stylesheet'>
@@ -45,9 +45,9 @@
             Guides
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="guide_timeline.html">Les grandes étapes</a>
-            <a class="dropdown-item" href="guide_contact.html">Contacts utiles</a>
-            <a class="dropdown-item" href="guide_lexique.html">Lexique de l'immobilier</a>
+            <a class="dropdown-item" href="etapes-cles-projet-immobilier.html">Les étapes clés de votre projet</a>
+            <a class="dropdown-item" href="astuces-pour-acheter-un-bien-immobilier.html">Quelques astuces</a>
+            <a class="dropdown-item" href="lexique-du-credit-immobilier.html">Le lexique du crédit immobilier</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -55,9 +55,9 @@
             Simulateurs
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="simulation_budget.html">Estimez votre budget</a>
-            <a class="dropdown-item" href="simulation_acheterlouer.html">Acheter ou louer</a>
-            <a class="dropdown-item" href="#">Votre plan de financement</a>
+            <a class="dropdown-item" href="calcul-budget-immobilier.html">Calculer votre budget</a>
+            <a class="dropdown-item" href="acheter-ou-louer-simulation.html">Acheter ou louer</a>
+            <a class="dropdown-item" href="optimiser-credit-immobilier.html">Optimiser votre crédit immobilier</a>
           </div>
         </li>
         <li class="nav-item">
@@ -72,9 +72,8 @@
 
 <div class="container" style="padding-bottom:5vh;min-height:100vh;">
     <div class="page-header">
-        <center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:6vh">En construction</center>
+        <h1><center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:6vh">Acheter ou louer</center></h1>
     </div>
-
 
 </div>
 
@@ -112,7 +111,7 @@ $(document).ready(function(){
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<div class="copyright">
-					<p>© <span><script>document.write(new Date().getFullYear())</script></span> <a href="#" class="transition">VescaLabs</a> All rights reserved.</p>
+					<p>© <span><script>document.write(new Date().getFullYear())</script></span> <a href="#" class="transition">Vesca</a> All rights reserved.</p>
 				</div>
 			</div>
 		</div>
