--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175116694-2" defer></script>
-<script defer>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175116694-2"></script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -12,22 +12,22 @@
   gtag('config', 'UA-175116694-2');
 </script>
 
-<title>Vesca</title>
+<title>Vesca | Des conseils pour réussir votre premier achat immobilier</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style_index.css">
 	<link rel="stylesheet" href="style_footer.css">
 	<link href='https://fonts.googleapis.com/css?family=Crimson Text' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	<link rel="icon" href="favicon.ico" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" defer></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 	<meta name="author" content="Pierre-Louis Schnitzler">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 <!-- Animation -->
 
-<script defer>
+<script>
 var myVar;
 
 function myFunction() {
@@ -92,7 +92,7 @@ function showPage() {
 	</nav>
 
 	<!--navbar closes on click-->
-	<script defer>
+	<script>
 		$('.navbar-nav>li>a').on('click', function(){
 	    $('.navbar-collapse').collapse('hide');
 	});
@@ -102,7 +102,7 @@ function showPage() {
 
 	<div class="bg-text">
 	  <p style="font-family: 'Crimson Text';font-size:12vh;">Vesca</p>
-	  <h5 style="font-family: 'Crimson Text';font-size:4vh;">Des outils pour démarrer son projet immobilier</h5>
+	  <h1 style="font-family: 'Crimson Text';font-size:4vh;">Des conseils pour réussir votre premier achat immobilier</h1>
 	</div>
 	
 	<!-- Section Guides  -->
@@ -110,23 +110,23 @@ function showPage() {
 	<div class = "container justify-content-center" style="padding-top: 10vh;" id="guides">
 		<center><p style="color:white;font-family: 'Crimson Text';font-size:10vh;">Guides</p></center>
 		<div>
-			<center><p style="color:white;font-size:3vh;padding-right:5%;padding-left:5%">Vous êtes novice dans le monde de l'immobilier ? Vous vous renseignez en vue d'un premier achat ? Pas de souci ! Les guides ci-dessous sont là pour vous aider.</p></center>
+			<center><h2 style="color:white;font-size:3vh;padding-right:5%;padding-left:5%">Vous êtes novice dans le monde de l'immobilier ? Vous cherchez des conseils en vue d'un premier achat ? Pas de souci ! Les guides ci-dessous sont là pour vous aider.</h2></center>
 		</div>
 		<div class="row">
 			<div class="col-md-4" style="padding:5vh;">
-				<a href="guide_timeline.html"><img src="timeline.png" alt="Timeline" style="width:100%;"/></a>
+				<a href="etapes-cles-projet-immobilier.html"><img src="timeline.png" alt="Les étapes clés de votre premier achat immobilier" style="width:100%;"/></a>
 				<hr>
-				<a href="guide_timeline.html" type="button" class="btn btn-primary btn-lg">Les grandes étapes</a>
+				<a href="etapes-cles-projet-immobilier.html" type="button" class="btn btn-primary btn-lg">Les étapes clés</a>
 			</div>
 			<div class="col-md-4" style="padding:5vh;">
-				<a href="guide_contact.html"><img src="phone-book.png" alt="Contacts" style="width:100%;"/></a>
+				<a href="astuces-pour-acheter-un-bien-immobilier.html"><img src="astuces.png" alt="Astuces pour acheter un bien immobilier" style="width:100%;"/></a>
 				<hr>
-				<a href="guide_contact.html" type="button" class="btn btn-primary btn-lg">Contacts utiles</a>
+				<a href="astuces-pour-acheter-un-bien-immobilier.html" type="button" class="btn btn-primary btn-lg">Quelques astuces</a>
 			</div>
 			<div class="col-md-4" style="padding:5vh;">
-				<a href="guide_lexique.html"><img src="open-book.png" alt="Livre" style="width:100%;"/></a>
+				<a href="lexique-du-credit-immobilier.html"><img src="lexique.png" alt="Lexique du crédit immobilier" style="width:100%;"/></a>
 				<hr>
-				<a href="guide_lexique.html" type="button" class="btn btn-primary btn-lg">Lexique de l'immobilier</a>
+				<a href="lexique-du-credit-immobilier.html" type="button" class="btn btn-primary btn-lg">Le lexique du crédit immobilier</a>
 			</div>
 		</div>
 	</div>
@@ -136,23 +136,23 @@ function showPage() {
 	<div class = "container justify-content-center" style="padding-top: 10vh" id="simulateurs">
 		<center><p style="color:white;font-family: 'Crimson Text';font-size:10vh;">Simulateurs</p></center>
 		<div>
-			<center><p style="color:white;font-size:3vh;padding-right:5%;padding-left:5%">Vous vous lancez dans un projet d'investissement immobilier ? Vous cherchez à calculer votre budget ou optimiser votre plan de financement ? Cette section est faite pour vous.</p></center>
+			<center><h2 style="color:white;font-size:3vh;padding-right:5%;padding-left:5%"> Acheter ou louer ? Comment calculer son budget pour l'achat d'une maison ou d'un appartement ? Combien emprunter à la banque ? Les simulateurs ci-dessous vous aideront à répondre à ces questions.</h2></center>
 		</div>
 		<div class="row">
 			<div class="col-md-4" style="padding:5vh;">
-				<a href="simulation_budget.html"><img src="money-bag.png" alt="Argent" style="width:100%;"></a>
+				<a href="simulation_budget.html"><img src="budget.png" alt="Calculer son budget immobilier" style="width:100%;"></a>
 				<hr>
-				<a href="simulation_budget.html" type="button" class="btn btn-primary btn-lg">Estimez votre budget</a>
+				<a href="simulation_budget.html" type="button" class="btn btn-primary btn-lg">Calculer son budget</a>
 			</div>
 			<div class="col-md-4" style="padding:5vh;">
-				<a href="simulation_acheterlouer.html"><img src="comparison.png" alt="Balance" style="width:100%;"></a>
+				<a href="simulation_acheterlouer.html"><img src="comparison.png" alt="Acheter ou louer | Simulation" style="width:100%;"></a>
 				<hr>
-				<a href="simulation_acheterlouer.html" type="button" class="btn btn-primary btn-lg">Acheter ou louer</a>
+				<a href="acheter-ou-louer-simulation.html" type="button" class="btn btn-primary btn-lg">Acheter ou louer</a>
 			</div>
 			<div class="col-md-4" style="padding:5vh;">
-				<a href="simulation_plan.html"><img src="speedometer.png" alt="Cadrant" style="width:100%;"></a>
+				<a href="optimiser-credit-immobilier.html"><img src="calculator.png" alt="Optimiser son crédit immobilier" style="width:100%;"></a>
 				<hr>
-				<a href="simulation_plan.html" type="button" class="btn btn-primary btn-lg">Votre plan de financement</a>
+				<a href="simulation_plan.html" type="button" class="btn btn-primary btn-lg">Optimiser votre crédit immobilier</a>
 			</div>
 		</div>
 	</div>
@@ -174,7 +174,7 @@ function showPage() {
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="copyright">
-						<p>© <span><script>document.write(new Date().getFullYear())</script></span> <a href="#" class="transition">VescaLabs</a> All rights reserved.</p>
+						<p>© <span><script>document.write(new Date().getFullYear())</script></span> <a href="#" class="transition">Vesca</a> All rights reserved.</p>
 					</div>
 				</div>
 			</div>
