--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function showPage() {
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id = "navbar1" style="background-color:rgb(11,26,33);">
 		<div class="container">
 		    <a class="navbar-brand" href="#" style="font-family: 'Crimson Text';">
-		        <h3>Vesca</h3>
+		        <h1>Vesca</h1>
 		    </a>
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 		        <span class="navbar-toggler-icon"></span>
@@ -152,7 +152,7 @@ function showPage() {
 			<div class="col-md-4" style="padding:5vh;">
 				<a href="optimiser-credit-immobilier.html"><img src="calculator.png" alt="Optimiser son crédit immobilier" style="width:100%;"></a>
 				<hr>
-				<a href="simulation_plan.html" type="button" class="btn btn-primary btn-lg">Optimiser votre crédit immobilier</a>
+				<a href="optimiser-credit-immobilier.html" type="button" class="btn btn-primary btn-lg">Optimiser votre crédit immobilier</a>
 			</div>
 		</div>
 	</div>
