--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@ function showPage() {
 		</div>
 		<div class="row">
 			<div class="col-md-4" style="padding:5vh;">
-				<a href="simulation_budget.html"><img src="budget.png" alt="Calculer son budget immobilier" style="width:100%;"></a>
+				<a href="calcul-budget-immobilier.html"><img src="budget.png" alt="Calculer son budget immobilier" style="width:100%;"></a>
 				<hr>
-				<a href="simulation_budget.html" type="button" class="btn btn-primary btn-lg">Calculer son budget</a>
+				<a href="calcul-budget-immobilier.html" type="button" class="btn btn-primary btn-lg">Calculer son budget</a>
 			</div>
 			<div class="col-md-4" style="padding:5vh;">
-				<a href="simulation_acheterlouer.html"><img src="comparison.png" alt="Acheter ou louer | Simulation" style="width:100%;"></a>
+				<a href="acheter-ou-louer-simulation.html"><img src="comparison.png" alt="Acheter ou louer | Simulation" style="width:100%;"></a>
 				<hr>
 				<a href="acheter-ou-louer-simulation.html" type="button" class="btn btn-primary btn-lg">Acheter ou louer</a>
 			</div>
